# openstack-ansible-os_horizon

./: .gitreview  CONTRIBUTING.rst  README.rst  Vagrantfile  bindep.txt  setup.cfg  test-requirements.txt  tox.ini
defaults/: main.yml
doc/source/: conf.py  configure-horizon.rst  index.rst
examples/: playbook.yml
handlers/: main.yml
meta/: main.yml
releasenotes/source/: conf.py
tasks/: horizon_apache.yml  horizon_db_setup.yml  horizon_db_sync.yml  horizon_install.yml  horizon_install_source.yml  horizon_post_install.yml  horizon_post_install_source.yml  horizon_pre_install.yml  horizon_service_setup.yml  horizon_ssl_key_create.yml  horizon_ssl_self_signed.yml  horizon_ssl_user_provided.yml  horizon_translations_update.yml  horizon_uwsgi.yml  install-apt.yml  main.yml
templates/: horizon-manage.py.j2  horizon_apache_ports.conf.j2  horizon_django.wsgi.j2  horizon_local_settings.py.j2  openstack_dashboard.conf.j2
tests/: ansible-role-requirements.yml  inventory  os_horizon-overrides.yml  test-container-create.yml  test-horizon-functional.yml  test-install-horizon.yml  test-install-infra.yml  test-install-tempest.yml  test-prep.yml  test-vars.yml  test.yml
vars/: debian.yml  distro_install.yml  main.yml  redhat-7.yml  redhat-8.yml  redhat.yml  source_install.yml  suse-42.yml  suse.yml
zuul.d/: jobs.yaml  project.yaml
